Changelog for 1.6.a